--- a/PandemobiumStockTrader/iOS/PandemobiumV2/MainStoryboard.storyboard
+++ b/PandemobiumStockTrader/iOS/PandemobiumV2/MainStoryboard.storyboard
@@ -77,11 +77,12 @@
                                             </navigationItem>
                                         </items>
                                     </navigationBar>
-                                    <button hidden="YES" contentMode="scaleToFill" restorationIdentifier="left" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Pre-8Q-xPH">
+                                    <button contentMode="scaleToFill" restorationIdentifier="left" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Pre-8Q-xPH">
                                         <rect key="frame" x="0.0" y="44" width="157" height="192"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <state key="normal">
                                             <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -89,8 +90,11 @@
                                         <state key="highlighted">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="leftButtonClicked:" destination="mSN-jo-zYT" eventType="touchUpInside" id="Amw-Cy-BnG"/>
+                                        </connections>
                                     </button>
-                                    <button hidden="YES" contentMode="scaleToFill" restorationIdentifier="right" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Byt-F4-KhV">
+                                    <button contentMode="scaleToFill" restorationIdentifier="right" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Byt-F4-KhV">
                                         <rect key="frame" x="155" y="44" width="165" height="192"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -102,6 +106,9 @@
                                         <state key="highlighted">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="rightButtonclicked:" destination="mSN-jo-zYT" eventType="touchUpInside" id="wog-lo-kMb"/>
+                                        </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="fB4-MO-txi">
                                         <rect key="frame" x="0.0" y="44" width="320" height="191"/>
@@ -112,7 +119,7 @@
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
-                                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" id="Aqn-r7-PrD">
+                                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="StockCell" id="Aqn-r7-PrD">
                                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -120,8 +127,15 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 </view>
+                                                <connections>
+                                                    <segue destination="MAD-b2-xH3" kind="modal" id="t1z-o4-6xS"/>
+                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="mSN-jo-zYT" id="t1l-iI-pPc"/>
+                                            <outlet property="delegate" destination="mSN-jo-zYT" id="DSU-VI-2KX"/>
+                                        </connections>
                                     </tableView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.53725492949999998" green="0.67058825489999996" blue="0.91372555489999996" alpha="1" colorSpace="deviceRGB"/>
@@ -129,6 +143,13 @@
                         </subviews>
                     </scrollView>
                     <navigationItem key="navigationItem" id="Tcz-on-T6a"/>
+                    <connections>
+                        <outlet property="leftButton" destination="Pre-8Q-xPH" id="5xl-fY-rv2"/>
+                        <outlet property="quoteTableView" destination="249-N1-7gP" id="KJL-6s-7Jk"/>
+                        <outlet property="rightButton" destination="Byt-F4-KhV" id="ubM-tz-aXY"/>
+                        <outlet property="scrollView" destination="iNc-xX-j3V" id="q0B-nf-Xml"/>
+                        <outlet property="topImage" destination="fB4-MO-txi" id="G61-3b-vIl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qfc-Zb-0d4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -355,7 +376,7 @@
         <!--Stock View Controller-->
         <scene sceneID="eft-4Z-eqN">
             <objects>
-                <viewController storyboardIdentifier="Stock" id="MAD-b2-xH3" customClass="StockViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StockView" id="MAD-b2-xH3" customClass="StockViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fdh-6R-MNP">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -591,8 +612,10 @@
         <class className="QuotesViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/QuotesViewController.h"/>
             <relationships>
+                <relationship kind="action" name="leftButtonClicked:"/>
                 <relationship kind="action" name="revealMenu:"/>
                 <relationship kind="action" name="revealUnderRight:"/>
+                <relationship kind="action" name="rightButtonclicked:"/>
                 <relationship kind="outlet" name="leftButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="quoteTableView" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="rightButton" candidateClass="UIButton"/>
