updating malicious web and walkthrough

--- a/PandemobiumStockTrader/Server/web/web/styles.css
+++ b/PandemobiumStockTrader/Server/web/web/styles.css
@@ -88,7 +88,22 @@ p.about{
     margin-right: 5px;
 
 }
+p.tutorial{
+    display: block;
+    width: 100%;
+    border-bottom: 1px solid #b9b9b9;
+    border-top: 1px solid #f7f7f7;
+    font-size: 1.25em; font-family: Tahoma, Arial, sans-serif;  line-height: 1.2em; text-align: justify; color: #000;
+    background: #ebebeb;
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ffffff) to(#ebebeb));
+    background-image: -webkit-linear-gradient(top, #ffffff, #ebebeb);
+    background-image:    -moz-linear-gradient(top, #ffffff, #ebebeb);
+    background-image:      -o-linear-gradient(top, #ffffff, #ebebeb);
+    background-image:         linear-gradient(top, #ffffff, #ebebeb);
+
+}
 h2.about{ font-size: 1.5em; font-family: Tahoma, Arial, sans-serif; font-weight: bold; line-height: 55px; text-align: center; color: #000; }
+h2.tutorial{ font-size: 1.5em; font-family: Tahoma, Arial, sans-serif; font-weight: bold; line-height: 55px; text-align: center; color: #000; }
 
 
 
